--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "next": "14.2.3",
+    "primereact": "^10.6.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-stripe-checkout": "^2.6.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
