--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
+    "primeflex": "^3.3.1",
     "primereact": "^10.6.6",
     "react": "^18",
     "react-dom": "^18",
