--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "primereact": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
